Improve Light component handling